# class_collapse

./: .gitignore  LICENSE  README.md  autoencoder.py  data.py  data_vg.py  data_yt.py  minimal_example.py  mydataset.py  plot_umap.py  pyproject.toml  synth_classifier.py  synth_supcon.py  synth_supcon_auto.py  synthetic.py
class_collapse/: main.py
class_collapse/config/: config.py  default.yaml
class_collapse/config/dataset/: house.yaml  synthetic.yaml
class_collapse/config/loss/: mse.yaml  nce.yaml  spread.yaml  supcon.yaml  supcon_2020.yaml
class_collapse/config/model/: enc.yaml
class_collapse/config/output/: default_output.yaml
class_collapse/data/: dataloaders.py  house_dataset.py  synthetic_dataset.py
class_collapse/eval/: plot_classification.py  plot_embeddings.py
class_collapse/training/: autoencoder.py  classifier.py  losses.py
outputs_antoine/encoder_only_house_MSE_loss_2023-12-10/20-50-52/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs_antoine/encoder_only_house_spread_2023-12-10/20-51-46/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs_antoine/encoder_only_house_supcon_2020_2023-12-10/20-51-18/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs_antoine/encoder_only_synthetic_MSE_loss_2023-12-10/20-41-12/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs_antoine/encoder_only_synthetic_spread_2023-12-10/20-41-51/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs_antoine/encoder_only_synthetic_supcon_2020_2023-12-10/20-41-33/.hydra/: config.yaml  (+2 more)
scripts/: cc_circle.py  test_house.py  test_nce.py
